// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooFormInputComponent rendering should render email input 1`] = `
<yoo-form-input
  class="hydrated"
  data-yoo-form-input-host=""
  type="email"
>
  
  
  <div
    class="input-container"
    data-yoo-form-input=""
  >
    
    <input
      class="swiper-no-swiping"
      data-yoo-form-input=""
      type="email"
    />
    
  </div>
</yoo-form-input>
`;

exports[`YooFormInputComponent rendering should render simple text input 1`] = `
<yoo-form-input
  class="hydrated"
  data-yoo-form-input-host=""
>
  
  
  <div
    class="input-container"
    data-yoo-form-input=""
  >
    
    <input
      class="swiper-no-swiping"
      data-yoo-form-input=""
      type="text"
    />
    
  </div>
</yoo-form-input>
`;

exports[`YooFormInputComponent rendering should render with tooltip 1`] = `
<yoo-form-input
  class="hydrated"
  data-yoo-form-input-host=""
  tooltip="This is a tooltip"
>
  
  
  <div
    class="input-container"
    data-yoo-form-input=""
  >
    
    <input
      class="swiper-no-swiping"
      data-yoo-form-input=""
      type="text"
    />
    
  </div>
</yoo-form-input>
`;

exports[`YooFormInputComponent should build 1`] = `
YooFormInputComponent {
  "_asyncValidator": [Function],
  "_validator": [Function],
  "showInputClear": false,
  "showPasswordToggle": false,
  "type": "text",
  "validators": Array [],
}
`;
